--- a/monami_portfolio/WebContent/css/join.css
+++ b/monami_portfolio/WebContent/css/join.css
@@ -8,7 +8,6 @@ body, table, div, p, span {
 }
 
 #main_container {
-	background: rgba(0, 0, 0, 0.5);
 	height: 100vh;
 }
 
@@ -29,18 +28,19 @@ a {
 	/* text-align:center; */
 	border-radius: 10px;
 /* 	padding: 30px 50px; */
-	padding: 50px 80px;
+	padding: 30px 80px;
 	background: #fff;
 	text-align: center;
 	position: absolute;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
+	margin:50px 0;
 }
 
 .join {
-	font-size: 20px;
-	font-weight: 600;
+	font-size: 30px;
+	font-weight: 300;
 	color: #333;
 }
 
@@ -58,7 +58,7 @@ a {
 	width: 310px;
 	height: 40px;
 	font-size: 15px;
-	background-color: #df3278;
+	background-color: #333;
 	color: #fff;
 	border: none;
 	cursor: pointer;
@@ -66,7 +66,7 @@ a {
 }
 
 .btn:hover {
-	background: #ca296a;
+	background: #111;
 	transition:.3s all;
 }
 
