--- a/monami_portfolio/WebContent/css/product.css
+++ b/monami_portfolio/WebContent/css/product.css
@@ -35,7 +35,7 @@
     line-height:2;
 }
 
-.product__menu li a:hover{
+.product__menu li:hover{
     font-weight: 900;
     color:#DF0101;
 /*     border-bottom: 3px solid #111; */
