--- a/monami_portfolio/WebContent/css/default.css
+++ b/monami_portfolio/WebContent/css/default.css
@@ -68,6 +68,7 @@ header{
   height: 100px;
   position: fixed;
   z-index: 4;
+  background:white;
 }
 
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
