--- a/monami_portfolio/WebContent/css/detail.css
+++ b/monami_portfolio/WebContent/css/detail.css
@@ -70,13 +70,14 @@
 	display: flex;
 	align-content: center;
 	flex-wrap:wrap;
+	width:600px;
 }
 
 .info-color-detail span{
 	display:inline-block;
-	width:64px;
 	vertical-align:bottom;
 	line-height:30px;
+	margin-right:10px;
 }
 
 .info-color-detail img{
