--- a/monami_portfolio/WebContent/css/about.css
+++ b/monami_portfolio/WebContent/css/about.css
@@ -5,6 +5,60 @@
   margin-bottom:0px;
 }
 
+/*********************** about__con0영역 *************************/
+.about__con0{
+	max-width:1080px;
+	margin:100px auto 0;
+	display:flex;
+	justify-content:space-between;
+	align-items:center;
+	flex-wrap:wrap;
+}
+
+.about__con0_tit {
+	width:100%;
+	text-align:center;
+}
+.about__con0_tit_big{
+	font-size:35px;
+	font-weight:400;
+	text-align:center;
+	margin:0px auto;
+	letter-spacing:-3px;
+}
+
+.about__con0_tit_small{
+	margin-bottom:80px;
+	font-size:17px;
+	letter-spacing:-1.8px;
+}
+
+.about_con0_img1, .about_con0_img2, .about_con0_img3{
+	width:33%;
+	height:100%;
+}
+
+
+.about_con0_img1 img, .about_con0_img2 img, .about_con0_img3 img{
+	width:100%;
+	height:100%;
+}
+
+.about_con0_img1, .about_con0_img2, .about_con0_img3{
+	overflow:hidden;
+	transition:transform .3s;
+	box-sizing: border-box;
+}
+
+.about_con0_img1 img, .about_con0_img2 img, .about_con0_img3 img{
+	transition:transform .3s;
+	box-sizing: border-box;
+}
+
+.about_con0_img1 img:hover, .about_con0_img2 img:hover, .about_con0_img3 img:hover{
+	overflow:hidden;
+	transform:scale(1.1);
+}
 
 /*********************** about__con1영역 *************************/
 
@@ -183,6 +237,37 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  position:relative;
+}
+
+
+.txt{
+	position:absolute;
+	top:35%;
+	left:20%;
+	display:block;
+	line-height:70px;
+	color:#fff;
+	font-size:52px;
+	font-weight:500;
+/* 	opacity:0; */
+	transition:all .6s ease-in-out .5s;
+	letter-spacing:-0.09em;
+	font-weight:600;
+	}
+
+small {
+	display:block;
+	margin-top:21px;
+	margin-left:5px;
+	line-height:32px;
+	font-size:24px;
+	font-weight:400;
+	letter-spacing:-0.025em;
+	}
+
+.black {
+	color:#000;
 }
 
 .logo{
