--- a/monami_portfolio/WebContent/css/product.css
+++ b/monami_portfolio/WebContent/css/product.css
@@ -58,12 +58,15 @@
     margin: 5px;
 }
 
+.product__con__wrap div:hover{
+	background:rgba(0,0,0,0.2);
+}
+
 .product__con__wrap div:before{
     content: '';
     display: block;
     padding-top: 100%;
 }
-
 
 
 .product__con1 span{
